@@ -3,6 +3,7 @@ git-annex (5.20140422) UNRELEASED; urgency=medium
   * Standalone builds now check gpg signatures before upgrading.
   * Simplified repository description line format. The remote name,
     if any, is always in square brackets after the description.
+  * assistant: Clean up stale tmp files on startup.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 23 Apr 2014 12:43:39 -0400
 
